# djangocms-multisite

./: HISTORY.rst  MANIFEST.in  addon.json  cms_helper.py  setup.cfg  tox.ini
.github/workflows/: test.yml
changes/: 42.feat
